# ai-lesson

./: .gitignore  README.md  output.csv  pyproject.toml
lesson14/: pytorch_train_model.ipynb
lesson4/: fuzzy-test.py
lesson5/: fuzzy-small-exam.py  fuzzy-test.py  fuzzy-test2.py
lesson6/: learning.py  learning2.py
lesson7/: learning1.py  learning2.py
lesson8/: geotest.py  handle_csv.py  output.csv  test.py
test/: art-test.py  test2.py
