[tool.poetry]
name = "ai-lesson"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
scikit-fuzzy = "^0.5.0"
numpy = "^2.1.2"
scipy = "^1.14.1"
packaging = "^24.1"
networkx = "^3.3"
matplotlib = "^3.9.2"
torch = "^2.5.1"
artlib = "^0.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
geopy = "^2.4.1"
torchmetrics = "^1.6.0"
torchvision = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
